--- a/week18.html
+++ b/week18.html
@@ -13,23 +13,23 @@
 <tr><td>DSamuel (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td>DAdams</td>        <td></td><td align=right>50</td></tr>
 <tr><td>Everett</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Aubrey (D)</td>    <td></td><td align=right>***</td></tr>
-<tr><td>Rice (D)</td>      <td></td><td align=right>***</td></tr>
+<tr><td>Aubrey (D)</td>    <td></td><td align=right>35</td></tr>
+<tr><td>Rice (D)</td>      <td></td><td align=right>140</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>John (4)</b></font></td></tr>
-<tr><td>Hurts (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td>KWilliams (D)</td> <td></td><td align=right>***</td></tr>
+<tr><td>Hurts (D)</td>     <td></td><td align=right>60</td></tr>
+<tr><td>KWilliams (D)</td> <td></td><td align=right>30</td></tr>
 <tr><td>Conner</td>        <td></td><td align=right>250</td></tr>
 <tr><td>JJefferson</td>    <td></td><td align=right>195</td></tr>
-<tr><td>St Brown (D)</td>  <td></td><td align=right>***</td></tr>
+<tr><td>St Brown (D)</td>  <td></td><td align=right>55</td></tr>
 <tr><td>Henry</td>         <td></td><td align=right>0</td></tr>
 <tr><td>Zuerlein</td>      <td></td><td align=right>95</td></tr>
 <tr><td>Grupe</td>         <td></td><td align=right>70</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>755</td></tr>
 </table>
 </td>
 <td></td><td></td>
@@ -96,11 +96,11 @@
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Randy (7)</b></font></td></tr>
 <tr><td>Prescott</td>      <td></td><td align=right>165</td></tr>
-<tr><td>Mixon</td>         <td></td><td align=right>55</td></tr>
-<tr><td>AJones</td>        <td></td><td align=right>180</td></tr>
+<tr><td>AJones</td>        <td></td><td align=right>55</td></tr>
+<tr><td>Mixon</td>         <td></td><td align=right>180</td></tr>
 <tr><td>Hill</td>          <td></td><td align=right>90</td></tr>
 <tr><td>Olave</td>         <td></td><td align=right>125</td></tr>
-<tr><td>Njoku (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Njoku (D)</td>     <td></td><td align=right>45</td></tr>
 <tr><td>Tucker (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Flowers (D)</td>   <td></td><td align=right>***</td></tr>
 <tr><td></td>              <td></td><td align=right>***</td></tr>
@@ -129,21 +129,21 @@
 <tr><td>Pollard</td>       <td></td><td align=right>85</td></tr>
 <tr><td>BHall</td>         <td></td><td align=right>295</td></tr>
 <tr><td>Evans</td>         <td></td><td align=right>0</td></tr>
-<tr><td>Cooper (D)</td>    <td></td><td align=right>***</td></tr>
+<tr><td>Cooper (D)</td>    <td></td><td align=right>25</td></tr>
 <tr><td>LaPorta</td>       <td></td><td align=right>50</td></tr>
 <tr><td>DCarlson</td>      <td></td><td align=right>80</td></tr>
 <tr><td>Gibbs</td>         <td></td><td align=right>50</td></tr>
-<tr><td></td>              <td></td><td align=right>***</td></tr>
+<tr><td></td>              <td></td><td align=right>675</td></tr>
 </table>
 </td>
 <td>
 <table border=0 cellspacing=0 width=140>
 <tr><td bgcolor=#B3B3B3 colspan=3><font color='purple'><b>Matthew (10)</b></font></td></tr>
 <tr><td>Purdy (D)</td>     <td></td><td align=right>***</td></tr>
-<tr><td>Pacheco (D)</td>   <td></td><td align=right>***</td></tr>
+<tr><td>Pacheco (D)</td>   <td></td><td align=right>90</td></tr>
 <tr><td>Achane</td>        <td></td><td align=right>175</td></tr>
 <tr><td>Metcalf</td>       <td></td><td align=right>0</td></tr>
-<tr><td>Nacua (D)</td>     <td></td><td align=right>***</td></tr>
+<tr><td>Nacua (D)</td>     <td></td><td align=right>215</td></tr>
 <tr><td>Kittle (D)</td>    <td></td><td align=right>***</td></tr>
 <tr><td>Koo</td>           <td></td><td align=right>40</td></tr>
 <tr><td>Stroud</td>        <td></td><td align=right>165</td></tr>
@@ -185,7 +185,7 @@
 <tr><td><font size=2>Grant(9)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>9895</font></td>
+    <td><font size=2>10570</font></td>
     <td><font size=2>8440</font></td>
     <td><font size=2>865</font></td>
     <td><font size=2>225</font></td>
@@ -225,7 +225,7 @@
 <tr><td><font size=2>John(4)</font></td>
     <td><font size=2>9</font></td>
     <td><font size=2>7</font></td>
-    <td><font size=2>11270</font></td>
+    <td><font size=2>12025</font></td>
     <td><font size=2>9425</font></td>
     <td><font size=2>965</font></td>
     <td><font size=2>385</font></td>
