--- a/boards.html
+++ b/boards.html
@@ -5,6 +5,7 @@
 <table cellpadding=4 cellspacing=0 width=526 border=0>
 <tr>
 <td bgcolor=#F2F2ED>
+<a href="board24.html"><b>2024</b></a><br>
 <a href="board23.html"><b>2023</b></a><br>
 <a href="board22.html"><b>2022</b></a><br>
 <a href="board21.html"><b>2021</b></a><br>
