--- a/freeagt.html
+++ b/freeagt.html
@@ -1,75 +1,89 @@
 <table border=0 cellspacing=0 cellpadding=2 width=100><tr>
 <td bgcolor=#802080 valign=center height=3 nowrap rowspan=2 width=705>
-<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 1)</font></b>&nbsp;&nbsp;</td></tr>
+<b><font size=6 color='white'><center>2024 Free Agent Leaderboard<br>(Through week 2)</font></b>&nbsp;&nbsp;</td></tr>
 </table>
 <table cellspacing=1><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Quarterbacks</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>3)</td><td><font size=3>Will Levis             </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Deshaun Watson         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>5)</td><td><font size=3>Bryce Young            </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>6)</td><td><font size=3>Justin Fields          </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>7)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Derek Carr             </td><td><font size=3> 485</td></tr>
+<tr><td><font size=3>2)</td><td><font size=3>Gardner Minshew        </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>3)</td><td><font size=3>Will Levis             </td><td><font size=3> 150</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Deshaun Watson         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Daniel Jones           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Justin Fields          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Malik Willis           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Bryce Young            </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Jacoby Brissett        </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Tyrod Taylor           </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Running Backs</td></tr>
 <tr><td><font size=3>DeeJay Dallas          </td><td><font size=3> 200</td></tr>
-<tr><td><font size=3>Alexander Mattison     </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Alexander Mattison     </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Jamaal Williams        </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Antonio Gibson         </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>Ty Chandler            </td><td><font size=3>  40</td></tr>
 <tr><td><font size=3>Tank Bigsby            </td><td><font size=3>  35</td></tr>
+<tr><td><font size=3>Clyde Edwards-Helaire  </td><td><font size=3>   0</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Wide Receivers</td></tr>
+<tr><td><font size=3>Alec Pierce            </td><td><font size=3> 260</td></tr>
+<tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>KaVontae Turpin        </td><td><font size=3> 200</td></tr>
 <tr><td><font size=3>Allen Lazard           </td><td><font size=3> 190</td></tr>
-<tr><td><font size=3>Alec Pierce            </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Quentin Johnston       </td><td><font size=3> 175</td></tr>
+<tr><td><font size=3>Darnell Mooney         </td><td><font size=3> 165</td></tr>
 <tr><td><font size=3>Ashton Dulin           </td><td><font size=3> 150</td></tr>
 <tr><td><font size=3>Brandin Cooks          </td><td><font size=3> 100</td></tr>
-<tr><td><font size=3>Jalen Nailor           </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Andrei Iosivas         </td><td><font size=3> 100</td></tr>
 <tr><td><font size=3>Mack Hollins           </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Wan'Dale Robinson      </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Dontayvion Wicks       </td><td><font size=3>  75</td></tr>
+<tr><td><font size=3>Romeo Doubs            </td><td><font size=3>  55</td></tr>
 <tr><td><font size=3>Michael Wilson         </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Tyler Johnson          </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Tyler Lockett          </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Gabe Davis             </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Jauan Jennings         </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Jakobi Meyers          </td><td><font size=3>  30</td></tr>
-<tr><td><font size=3>Rashod Bateman         </td><td><font size=3>  25</td></tr>
-<tr><td><font size=3>Romeo Doubs            </td><td><font size=3>  25</td></tr>
+<tr><td><font size=3>Josh Reynolds          </td><td><font size=3>  45</td></tr>
 </table>
 </td></tr><tr><td valign=top>
 <table width=260 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=3><font size=5 color='yellow'><center>Tight Ends</td></tr>
-<tr><td><font size=3>1)</td><td><font size=3>Isaiah Likely          </td><td><font size=3> 180</td></tr>
+<tr><td><font size=3>1)</td><td><font size=3>Elijah Higgins         </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>2)</td><td><font size=3>Juwan Johnson          </td><td><font size=3>  75</td></tr>
 <tr><td><font size=3>3)</td><td><font size=3>Chig Okonkwo           </td><td><font size=3>  75</td></tr>
-<tr><td><font size=3>4)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>4)</td><td><font size=3>Hunter Henry           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>5)</td><td><font size=3>Foster Moreau          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>6)</td><td><font size=3>Darnell Washington     </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>7)</td><td><font size=3>Mike Gesicki           </td><td><font size=3>  45</td></tr>
+<tr><td><font size=3>8)</td><td><font size=3>Zach Ertz              </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>9)</td><td><font size=3>Brenton Strange        </td><td><font size=3>  30</td></tr>
+<tr><td><font size=3>10)</td><td><font size=3>Jonnu Smith            </td><td><font size=3>  25</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Kickers</td></tr>
-<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 290</td></tr>
-<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 220</td></tr>
-<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 130</td></tr>
-<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 110</td></tr>
-<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 105</td></tr>
-<tr><td><font size=3>Joey Slye              </td><td><font size=3>  95</td></tr>
-<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3>  70</td></tr>
-<tr><td><font size=3>Jake Bates             </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Matt Prater            </td><td><font size=3>  60</td></tr>
-<tr><td><font size=3>Nick Folk              </td><td><font size=3>  55</td></tr>
-<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  50</td></tr>
-<tr><td><font size=3>Daniel Carlson         </td><td><font size=3>  35</td></tr>
-<tr><td><font size=3>Spencer Shrader        </td><td><font size=3>  15</td></tr>
-<tr><td><font size=3>Cade York              </td><td><font size=3>  10</td></tr>
-<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>   5</td></tr>
+<tr><td><font size=3>Chris Boswell          </td><td><font size=3> 375</td></tr>
+<tr><td><font size=3>Blake Grupe            </td><td><font size=3> 265</td></tr>
+<tr><td><font size=3>Cairo Santos           </td><td><font size=3> 255</td></tr>
+<tr><td><font size=3>Daniel Carlson         </td><td><font size=3> 215</td></tr>
+<tr><td><font size=3>Dustin Hopkins         </td><td><font size=3> 210</td></tr>
+<tr><td><font size=3>Cameron Dicker         </td><td><font size=3> 205</td></tr>
+<tr><td><font size=3>Matt Prater            </td><td><font size=3> 190</td></tr>
+<tr><td><font size=3>Austin Seibert         </td><td><font size=3> 185</td></tr>
+<tr><td><font size=3>Wil Lutz               </td><td><font size=3> 160</td></tr>
+<tr><td><font size=3>Jake Bates             </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>Joey Slye              </td><td><font size=3> 145</td></tr>
+<tr><td><font size=3>Nick Folk              </td><td><font size=3> 110</td></tr>
+<tr><td><font size=3>Eddy Pineiro           </td><td><font size=3>  80</td></tr>
+<tr><td><font size=3>Greg Zuerlein          </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Matt Gay               </td><td><font size=3>  35</td></tr>
 </table>
 </td><td valign=top>
 <table width=220 border=2 cellspacing=0 cellpadding=1>
 <tr bgcolor=#000A78><td colspan=2><font size=5 color='yellow'><center>Rookies</td></tr>
 <tr><td><font size=3>Jalen McMillan         </td><td><font size=3> 100</td></tr>
+<tr><td><font size=3>Ja'Lynn Polk           </td><td><font size=3>  50</td></tr>
+<tr><td><font size=3>Carson Steele          </td><td><font size=3>   0</td></tr>
 </table>
 </td></tr></table>
